# desafio-valcann

./: README.md  pyproject.toml
primeira_questao/: README.md  diagrama.mmd
segunda_questao/src/: main.py
segunda_questao/src/controllers/: users_controllers.py
segunda_questao/src/models/: user.py
segunda_questao/src/repositories/: user_repository.py
segunda_questao/src/services/: users_service.py
segunda_questao/src/utils/: logger.py
segunda_questao/tests/: test_users.py
