[project]
name = "desafio-valcann"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
run = 'fastapi dev segunda_questao/app/app.py'
test = 'pytest -s -x --cov=segunda_questao -vv'
post_test = 'coverage html'